<resources>
    <string name="app_name">GSoc-2019-Python-library-for-real-time-data-visualization</string>

    <!-- Prompt & actions -->

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_forgot_password">Forgot password?</string>
    <string name="prompt_create_account">No account yet? Create one!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_phone_number">Phone number</string>
    <string name="prompt_age">Age</string>


    <!-- Action -->

    <string name="action_sign_in">Sign in</string>
    <string name="hint_email">email@example.com</string>


    <!-- Buttons -->

    <string name="google_sign_in">GOOGLE SIGN IN</string>
    <string name="btn_back">BACK</string>
    <string name="lbl_forgot_password">Reset you password here!</string>
    <string name="forgot_password_msg">Insert the email you create your account and we will send you a message to reset your password.</string>
    <string name="register_as_donor_button">REGISTER AS DONOR</string>
    <string name="register_as_volunteer_button">REGISTER AS VOLUNTEER</string>
    <string name="btn_reset_password">RESET PASSWORD</string>
    <string name="register_button">REGISTER</string>
    <string name="cancel_button">CANCEL</string>
    <string name="google_sign_up">GOOGLE SIGN UP</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_about_us">About us</string>


    <!-- Text and titles -->

    <string name="title_create_account">What kind of help do you want to offer?</string>
    <string name="conditions_register_as_donor">If you register as Donor you will have the possibility to donate things like food, clothes, a work place, lodging, or higine products.You can do it personally or request the help of a volunteer person who will deliver the products for you.You also can contact us if you know some person who needs our help.</string>
    <string name="conditions_register_as_volunteer">If you register as Volunteer you commit to complete and manage the profiles of one or several people in need, talking with them and in case that someone wants to donate them something you should facilitate the delivery of the products.</string>
    <string name="register_donor">Register using email</string>
    <string name="register_donor_title">REGISTER AS DONOR</string>
    <string name="register_volunteer_title">REGISTER AS VOLUNTEER</string>
    <string name="account_info">Account Info</string>
    <string name="personal_info">Personal Info</string>
    <string name="about_text">This is an application designed to help people who do not have basic resources, such as food, clothing, a place of work or accommodation. The application has two profiles: The Donor, through which the user has the possibility to donate resources to a person you choose. You can deliver the resources personally or through a volunteer. The second profile is Volunteer, where the user has the possibility to manage several profiles of people in need and help them receive the help offered. The application looks at all times to comply with the current Data Protection Laws. </string>
    <string name="about_title">ABOUT US</string>
    <string name="statistics_title">STATISTICS</string>
    <string name="statistics_received_help">PERSONS WHO RECEIVED HELP:</string>
    <string name="statistics_volunteers">VOLUNTEERS REGISTERED:</string>
    <string name="statistics_need_help">PERSONS WHO NEED HELP:</string>
    <string name="statistics_donors">DONORS REGISTERED:</string>
    <string name="register_title">REGISTER</string>
    <string name="check_volunteer">You want to register as a volunteer?</string>

    <!-- KEYS -->
    <string name="wifi_connected">Wifi Connected</string>
    <string name="mobile_internet">Mobile Internet Connected</string>
    <string name="internet_not_available">Internet not Connected</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>


    <string name="menu_profiles">Profiles</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_support">Support Development</string>
    <string name="menu_logout">Logout</string>


    <string name="title_nav_profile">PROFILES</string>
    <string name="title_nav_help">HELP</string>
    <string name="title_nav_about">ABOUT US</string>
    <string name="title_nav_support">SUPPORT DEVELOPMENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
