<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_nav_home"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_nav_home"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/support_nav_home"
            android:title="@string/menu_support" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_nav_home"
            android:title="@string/menu_logout" />
    </group>

</menu>
