<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    tools:context=".RegisterActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"/>


        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_info"
            android:layout_gravity="start"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:textColor="@color/darkblue"/>



        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:hint="@string/prompt_username"
            android:maxLines="1"
            android:drawableStart="@drawable/user"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:hint="@string/prompt_email"
            android:maxLines="1"
            android:drawableStart="@drawable/email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:hint="@string/prompt_password"
            android:maxLines="1"
            android:drawableStart="@drawable/lock"
            android:inputType="textPassword"
            android:singleLine="true" />

        <CheckedTextView
            android:id="@+id/is_volunteer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:text="@string/check_volunteer"

            />

        <include layout="@layout/register_volunteer"/>

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/register_button"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textSize="15sp"/>


        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/grey"
            android:text="@string/cancel_button"
            android:textColor="@color/white" />


    </LinearLayout>


</ScrollView>
