<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/volunteer_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_info"
            android:layout_gravity="start"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/darkblue"/>

        <EditText
            android:id="@+id/first_name_volunteer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:hint="@string/prompt_first_name"
            android:maxLines="1"
            android:drawableStart="@drawable/add_person"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <EditText
            android:id="@+id/last_name_volunteer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:hint="@string/prompt_last_name"
            android:maxLines="1"
            android:drawableStart="@drawable/add_person"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <EditText
            android:id="@+id/phone_number_volunteer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:hint="@string/prompt_phone_number"
            android:maxLines="1"
            android:drawableStart="@drawable/phone"
            android:inputType="phone"
            android:singleLine="true" />

        <EditText
            android:id="@+id/age_volunteer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:hint="@string/prompt_age"
            android:maxLines="1"
            android:drawableStart="@drawable/age"
            android:inputType="numberDecimal"
            android:singleLine="true" />


    </LinearLayout>


</ScrollView>
